# val_knowledges

./: .project  .pydevproject  index.html  main_server.conf  readme.md  xwiki_backup.sh
core_trigger/: index.html  pyproject.toml
core_trigger/core_server/: TriggerServer.py
core_trigger/css/: style.css
core_trigger/scripts/: gate.js
core_trigger/src/core_server/: CSMain.py
core_trigger/src/core_trigger/: CTConfiguration.py  CTMain.py  CTService.py  CTServiceLauncher.py
core_trigger/tools/: upload_to_server.py
core_trigger/wsgi_applications/: wsgi_adapter.py
core_trigger_old/configurations/: main_server_launch.service
core_trigger_old/core_server/: MainServer.py
core_trigger_old/css/: trigger_button.css
core_trigger_old/scripts/: gate.js
core_trigger_old/tools/: upload_to_server.py
css/: style.css
podServer/: pyproject.toml
podServer/src/podServer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
podServer/src/podServer/core/: Configuration.py
podServer/src/podServer/core_server/: CSMain.py  CSRequestHandler.py
podServer/src/podServer/core_trigger/: CTMain.py  CTServiceLauncher.py  CTWSGI.py  setup.py
wsgi_applications/: wsgi_adapter.py
