[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podServer"
version = "0.0.3"
authors = [
  { name="Valentin Beynard", email="val.beynard@gmail.com" },
]
description = "Power On Demand Server. Tool to control a powerfull server boot and services from a Raspberry Pi low power server"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pod-ct = "podServer.core_trigger.CTMain:main"
pod-cs = "podServer.core_server.CSMain:main"
